--- a/src/app/mycomponents/todos/todos.component.html
+++ b/src/app/mycomponents/todos/todos.component.html
@@ -1,8 +1,12 @@
-<app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
-<h3 class="mt-5">List of To-do</h3>
-<div *ngIf="this.todos.length === 0; else elseBlock" class="m-4">No To-dos present</div>
-<ng-template #elseBlock>
-    <div *ngFor="let todo of todos">
-        <app-todo-items [todo]="todo" (todoDelete)="deleteTodo($event)" (todoToggle)="toggleTodo($event)"></app-todo-items>
-    </div>
-</ng-template>
+<div class="container">
+    <h1 class="text-center mb-3">To-do List</h1>
+    <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
+    <h3 class="mt-5">List of To-do</h3>
+    <div *ngIf="this.todos.length === 0; else elseBlock" class="m-4">No To-dos present</div>
+    <ng-template #elseBlock>
+        <div *ngFor="let todo of todos">
+            <app-todo-items [todo]="todo" (todoDelete)="deleteTodo($event)" (todoToggle)="toggleTodo($event)">
+            </app-todo-items>
+        </div>
+    </ng-template>
+</div>
